- Fixed bug #61267: pdo_pgsql's PDO::exec() returns the number of SELECTed   rows on postgresql >= 9